@@ -47,6 +47,7 @@
 * Implemented ability to use user display name, first and last name in a communication message
 * Implemented ability to use first and last name in a ping
 * Implemented ability to enter first and last name during registration
+* Implemented BuddyPress friendship protection rule
 * Improved compatibility with WP Better Email plugin
 * Improved rendering gateway information at the members list table
 * Improved ping argument processing
